--- a/app/src/main/res/layout/splash_screen_fragment.xml
+++ b/app/src/main/res/layout/splash_screen_fragment.xml
@@ -23,8 +23,9 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/size_10dp"
             android:text="@string/get_started"
+            android:textColor="@color/white"
             android:fontFamily="@font/poppins_regular"
-            android:backgroundTint="@color/buttoncolor"
+            android:backgroundTint="@color/button_blue"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
