--- a/app/src/main/res/drawable/custom_button_round_corner.xml
+++ b/app/src/main/res/drawable/custom_button_round_corner.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
 
-    <solid android:color="@color/buttoncolor"/>
-    <corners android:radius="50dp"/>
+    <solid android:color="@color/button_blue" />
+    <corners android:radius="50dp" />
+    <stroke
+        android:width="@dimen/size_1dp"
+        android:color="@color/buttoncolor" />
 </shape>
