--- a/app/src/main/res/layout/fragment_dash_board.xml
+++ b/app/src/main/res/layout/fragment_dash_board.xml
@@ -36,7 +36,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txt_dashboard"
-                android:background="@color/background_gray"
+                android:background="@color/button_blue"
                 android:orientation="vertical">
 
                 <TextView
@@ -46,7 +46,7 @@
                     android:layout_marginStart="@dimen/size_12dp"
                     android:fontFamily="@font/poppins_semibold"
                     android:textSize="@dimen/size_18sp"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:layout_marginTop="@dimen/size_12dp" />
 
 
