FEATURE 2350 - Android-Button Color change - ActionDetailsAdapter.kt file removed unused variables. - strings.xml added new text. - Created icon_image_view_background.xml drawable file for all icons background. - Created custom_cancel_button_round_corner.xml drawable fie for All Cancel button background. - New button color Applied xml files are, 1) event_details_card_view.xml 2) fragment_bid_rejection_dialog.xml 3) fragment_dash_board.xml 4) fragment_email_otp.xml 5) fragment_quote_brief.xml 6) fragment_quote_details_dialog.xml 7) quote_brief_dialog.xml

--- a/app/src/main/res/layout/sign_in_fragment.xml
+++ b/app/src/main/res/layout/sign_in_fragment.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <variable
             name="signinViewModel"
             type="com.smf.events.ui.signin.SignInViewModel" />
@@ -96,7 +95,7 @@
                 android:hint="@string/phonenumber"
                 android:inputType="numberDecimal"
                 android:maxLength="10"
-                android:textColor="#F0333333" />
+                android:textColor="@color/fade_black" />
 
         </LinearLayout>
 
