Feature 2402 - View Order Details
-Added ViewOrderDetailsFragment.kt
-Added ViewOrderDetailsModule.kt
-Added ViewOrderDetailsAdaptor.kt
-Added ViewOrderDetailsRepository.kt
-Added ViewOrderDetailsViewModel.kt
-Added ViewOrderDetails Api Call in ApiStories
-Added List helper  in helper package For non-scrollable list
-Added DateFormatter object in helper package to format the data
-In actionDetails adaptor added the arrow but flow
-In Activity Builder i done the dagger

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,5 +21,6 @@
     // 2350
     <color name="fade_gray">#EBE1E1E1</color>
     <color name="fade_black">#F0333333</color>
+    <color name="fade_background">#F4F2F2</color>
 
 </resources>
