Feature 2402 - View Order Details
-Added ViewOrderDetailsFragment.kt
-Added ViewOrderDetailsModule.kt
-Added ViewOrderDetailsAdaptor.kt
-Added ViewOrderDetailsRepository.kt
-Added ViewOrderDetailsViewModel.kt
-Added ViewOrderDetails Api Call in ApiStories
-Added List helper  in helper package For non-scrollable list
-Added DateFormatter object in helper package to format the data
-In actionDetails adaptor added the arrow but flow
-In Activity Builder i done the dagger

--- a/app/src/main/res/layout/fragment_view_order_details_dialog.xml
+++ b/app/src/main/res/layout/fragment_view_order_details_dialog.xml
@@ -88,7 +88,7 @@
                             android:id="@+id/tx_job_title"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
+                            android:layout_marginTop="@dimen/size_5dp"
                             android:fontFamily="@font/poppins_medium"
                             android:textColor="@color/black"
                             android:textSize="@dimen/size_18sp"
@@ -348,7 +348,7 @@
                     <View
                         android:id="@+id/view_seperater_1"
                         android:layout_width="match_parent"
-                        android:layout_height="1dp"
+                        android:layout_height="@dimen/size_1dp"
                         android:layout_margin="@dimen/size_15dp"
                         android:layout_marginTop="@dimen/size_10dp"
                         android:background="@color/buttoncolor"
