--- a/app/src/main/res/layout/fragment_bid_rejection_dialog.xml
+++ b/app/src/main/res/layout/fragment_bid_rejection_dialog.xml
@@ -44,15 +44,28 @@
 
             </LinearLayout>
 
+            <TextView
+                android:id="@+id/reason_for_rejection_title_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/size_15dp"
+                android:fontFamily="@font/poppins_medium"
+                android:text="@string/reason_for_rejection"
+                android:textSize="@dimen/size_18sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/title_layout" />
+
             <LinearLayout
                 android:id="@+id/linear_spn_layout"
                 android:layout_width="@dimen/size_250dp"
                 android:layout_height="@dimen/size_45dp"
                 android:layout_gravity="center"
-                android:layout_marginTop="@dimen/size_10dp"
                 android:background="@drawable/shapes"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/title_layout">
+                app:layout_constraintTop_toBottomOf="@+id/reason_for_rejection_title_text">
 
                 <Spinner
                     android:id="@+id/spn_reason"
@@ -69,7 +82,7 @@
                 android:id="@+id/tx_comments"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/size_25dp"
+                android:layout_marginTop="@dimen/size_20dp"
                 android:fontFamily="@font/poppins_medium"
                 android:text="@string/comments"
                 android:textSize="@dimen/size_18sp"
@@ -96,16 +109,16 @@
                 android:layout_marginTop="@dimen/size_5dp"
                 android:fontFamily="@font/poppins_regular"
                 android:text="@string/comments_is_mandatory_for_thr_option"
-                android:textColor="#F84141"
+                android:textColor="@color/red"
                 android:textSize="@dimen/size_15sp"
-                android:visibility="invisible"
+                android:visibility="gone"
                 app:layout_constraintTop_toBottomOf="@+id/et_comments" />
 
             <TextView
                 android:id="@+id/tx_alert"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/size_10dp"
+                android:layout_marginTop="@dimen/size_4dp"
                 android:fontFamily="@font/poppins_medium"
                 android:text="@string/if_you_want"
                 android:textSize="@dimen/size_18sp"
@@ -115,7 +128,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/size_65dp"
-                android:layout_marginTop="@dimen/size_32dp"
+                android:layout_marginTop="@dimen/size_12dp"
                 android:weightSum="3"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -125,7 +138,7 @@
                     android:id="@+id/btn_cancel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="18dp"
+                    android:layout_marginTop="@dimen/size_18dp"
                     android:layout_marginEnd="@dimen/size_5dp"
                     android:layout_weight="1.5"
                     android:background="@drawable/custom_cancel_button_round_corner"
