TASK 2458 - Calendar_view_UI_Screen
-Added Android Injected thing for ScheduleManagement and CalendarSchedule
-Added Activity in Manifest .xml
-Added Right Arrow drawable arrow_right.xml
-Added lifecycleOwner in BaseActivity.kt
-Added CalendarIcon in DashBoardFragment.kt
-Added activity_schedule_management.xml
-Added arrow_left_24.xml
-Added calendar.png
-Added calendar_cell.xml
-Added calendar_icon.xml
-Added CalendarAdapter.kt,CalendarFragment.kt,CalendarUtile.kt
-Added ScheduleManagementActivity.kt
-Added ScheduleManagementModule.kt
-Added ScheduleManagementRepository.kt
-Added ScheduleManagementViewModel.kt

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -65,7 +65,9 @@
     <dimen name="size_30sp">30sp</dimen>
     <dimen name="size_19sp">19sp</dimen>
     <dimen name="size_40sp">40sp</dimen>
-
+    <dimen name="size_24sp">24sp</dimen>
+    // 2458
+    <dimen name="size_6dp">6dp</dimen>
 
 
 </resources>
