--- a/app/src/main/res/layout/fragment_dash_board.xml
+++ b/app/src/main/res/layout/fragment_dash_board.xml
@@ -27,7 +27,6 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-
             <LinearLayout
                 android:id="@+id/myEvents_layout"
                 android:layout_width="match_parent"
@@ -39,29 +38,42 @@
                 android:background="@color/button_blue"
                 android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/services"
-                    android:layout_marginStart="@dimen/size_12dp"
-                    android:fontFamily="@font/poppins_semibold"
-                    android:textSize="@dimen/size_18sp"
-                    android:textColor="@color/white"
-                    android:layout_marginTop="@dimen/size_12dp" />
+                    android:orientation="horizontal"
+                    android:weightSum="3">
 
+                    <TextView
+                        android:layout_weight="2.5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/services"
+                        android:layout_marginStart="@dimen/size_12dp"
+                        android:fontFamily="@font/poppins_semibold"
+                        android:textSize="@dimen/size_18sp"
+                        android:textColor="@color/white"
+                        android:layout_marginTop="@dimen/size_15dp" />
+
+                    <ImageView
+                        android:layout_marginTop="@dimen/size_12dp"
+                        android:layout_weight=".5"
+                        android:id="@+id/calander"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/calendar_icon" />
+                </LinearLayout>
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/events_recycler_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/size_8dp"
                     android:layout_marginStart="@dimen/size_12dp"
                     android:layout_marginBottom="@dimen/size_20dp"
                     android:orientation="horizontal"
                     tools:listitem="@layout/events_card_view" />
 
             </LinearLayout>
-
 
             <LinearLayout
                 android:layout_marginTop="@dimen/size_15dp"
@@ -138,11 +150,5 @@
 
                 </androidx.fragment.app.FragmentContainerView>
             </LinearLayout>
-
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-
-
 </layout>
