--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,5 +22,6 @@
     <color name="fade_gray">#EBE1E1E1</color>
     <color name="fade_black">#F0333333</color>
     <color name="fade_background">#F4F2F2</color>
+    <color name="calendar_pick">#F3F39B</color>
 
 </resources>
